[gd_scene load_steps=11 format=3 uid="uid://cexnixxugu18w"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_f04ut"]
[ext_resource type="PackedScene" uid="uid://crpu5sr421wko" path="res://scenes/hud.tscn" id="2_b2t5w"]
[ext_resource type="Shader" path="res://level_1.gdshader" id="3_c4w4i"]
[ext_resource type="Texture2D" uid="uid://cg4uchl1qycak" path="res://assets/textures/background.png" id="4_4irhj"]
[ext_resource type="PackedScene" uid="uid://cbe5w0jiptt3x" path="res://scenes/player.tscn" id="5_lrvxt"]
[ext_resource type="PackedScene" uid="uid://d3dd2p0s6sfu5" path="res://scenes/enemy_spawner.tscn" id="6_ck48g"]
[ext_resource type="AudioStream" uid="uid://mg6rdbs08of4" path="res://assets/audio/enemy_hit.wav" id="7_forhy"]
[ext_resource type="AudioStream" uid="uid://l5dlbo60drb3" path="res://assets/audio/player_death.wav" id="8_f2b3f"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ekptl"]
shader = ExtResource("3_c4w4i")
shader_parameter/direction = Vector2(0, -15)
shader_parameter/speed_scale = 0.01

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4j8yl"]
size = Vector2(1518.8, 120.4)

[node name="Level" type="Node2D"]
script = ExtResource("1_f04ut")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("2_b2t5w")]

[node name="FPS" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Background" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_ekptl")
offset_left = -3040.0
offset_top = -3812.0
offset_right = 4168.0
offset_bottom = 4081.0
texture = ExtResource("4_4irhj")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("5_lrvxt")]
position = Vector2(606, 1015)
fire_vibration_weak_magnitude = 1.0
fire_vibration_strong_magnitude = 0.0
fire_vibration_length = 0.1

[node name="EnemySpawner" parent="." instance=ExtResource("6_ck48g")]

[node name="DeathZone" type="Area2D" parent="."]
position = Vector2(613, 1496)
scale = Vector2(5, 5)
collision_layer = 8
collision_mask = 2
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
shape = SubResource("RectangleShape2D_4j8yl")

[node name="EnemyHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_forhy")
volume_db = -6.118
pitch_scale = 1.96

[node name="PlayerDeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_f2b3f")
volume_db = -6.674

[connection signal="damage_taken" from="Player" to="." method="_on_player_damage_taken"]
[connection signal="enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawned"]
[connection signal="path_enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_path_enemy_spawned"]
[connection signal="area_entered" from="DeathZone" to="." method="_on_enemy_death_zone_area_entered"]
